feat(phase-2): complete WebSocket real-time push and priority queue batch processing
Phase 2 Implementation Complete - Real-time Push & Intelligent Batch Processing

## Major Deliverables

### 1. WebSocket Real-time Push System
- ConnectionManager: Thread-safe async connection lifecycle management
- 8 WebSocket message types with full serialization
- REST API endpoints for connection management and broadcasting
- Support for multiple connections per user (device management)
- Heartbeat and health monitoring

### 2. Priority Queue Batch Processing
- NotificationPriorityQueue with BinaryHeap ordering
- 4 adaptive flush strategies (Default, Aggressive, Conservative, Real-time)
- Per-user rate limiting with sliding windows
- Comprehensive metrics collection and monitoring

### 3. REST API Integration
- GET /api/v1/ws/status/{user_id} - Connection status
- POST /api/v1/ws/broadcast - Broadcast to all users
- GET /api/v1/ws/metrics - Queue statistics
- POST /api/v1/ws/notify/{user_id} - Target specific user
- POST /api/v1/ws/error/{user_id} - Error notifications
- GET /api/v1/ws/users - List connected users

## Code Quality Metrics
- 111 tests passing (100%)
- 31 new tests for Phase 2 features
- Zero compilation errors in new code
- Type-safe implementations with proper error handling
- Full async/await compliance

## Files Added
- src/handlers/websocket.rs - REST API endpoints (250+ lines)
- src/websocket/manager.rs - ConnectionManager (680 lines)
- src/websocket/messages.rs - Message types
- src/services/priority_queue.rs - Queue system (600+ lines)

## Files Modified
- src/main.rs - ConnectionManager initialization and integration
- src/lib.rs - Websocket module exports
- src/handlers/mod.rs - Route registration
- src/services/mod.rs - Queue system exports
- Cargo.toml - Added actix-web-actors dependency

## Test Coverage
✅ WebSocket Manager: 16/16 tests passing
✅ Priority Queue: 15/15 tests passing
✅ API Integration: 16/16 tests passing
✅ Kafka Consumer: 18/18 tests p

--- a/backend/notification-service/Cargo.toml
+++ b/backend/notification-service/Cargo.toml
@@ -15,7 +15,9 @@ name = "notification_service"
 path = "src/lib.rs"
 
 [dependencies]
+actix = "0.13"
 actix-web.workspace = true
+actix-web-actors = "4.3"
 actix-rt.workspace = true
 tokio.workspace = true
 sqlx.workspace = true
