feat(cleanup): Remove duplicate video/media/streaming code from user-service
Removes 6000+ lines of duplicate video, media, and streaming code that has been
migrated to independent microservices:
- Media service (port 8082): Video processing, transcoding, uploads
- Streaming service (port 8088): Live streaming, RTMP/HLS
- Feed service (port 8089): Recommendations and trending

Changes:
- Delete all video handlers (reels, videos, uploads, transcoding)
- Delete all video services (deep_learning_inference, ffmpeg_optimizer, transcoding, etc.)
- Delete all streaming services and handlers
- Delete CDN/failover services (moved to media-service)
- Delete video-related config and models
- Clean up main.rs: Remove streaming initialization, service registration
- Update workspace Cargo.toml to correct service references

Verification:
- user-service builds successfully
- All 262 unit tests pass
- Streaming routes and WebSocket endpoints removed
- Event producer initialization moved outside streaming section

This aligns with "Phase 7" microservices decomposition where each service
is implemented in exactly one place (no duplication).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [workspace]
 members = [
     "backend/user-service",
+    "backend/content-service",
+    "backend/feed-service",
     "backend/media-service",
-    "backend/recommendation-service",
-    "backend/video-service",
+    "backend/messaging-service",
+    "backend/search-service",
     "backend/streaming-service",
+    "backend/libs/crypto-core",
+    "backend/libs/db-pool",
     "backend/libs/error-handling",
-    "backend/libs/video-core",
-    "backend/libs/db-pool"
+    "backend/libs/redis-utils"
 ]
 resolver = "2"
 
