Add staging smoke workflow and metrics endpoints

--- a/backend/media-service/Cargo.toml
+++ b/backend/media-service/Cargo.toml
@@ -31,6 +31,8 @@ thiserror = { workspace = true }
 tonic = { workspace = true }
 prost = { workspace = true }
 utoipa = { workspace = true }
+prometheus = { workspace = true }
+once_cell = "1.19"
 
 # Media-specific dependencies
 futures = "0.3"
