--- a/backend/auth-service/Cargo.toml
+++ b/backend/auth-service/Cargo.toml
@@ -30,6 +30,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 envy = "0.4"
 once_cell = "1.19"
+prometheus = { workspace = true }
 
 # Logging
 tracing = "0.1"
