--- a/backend/feed-service/Cargo.toml
+++ b/backend/feed-service/Cargo.toml
@@ -57,6 +57,7 @@ error-types = { path = "../libs/error-types" }
 error-handling = { path = "../libs/error-handling" }
 video-core = { path = "../libs/video-core" }
 db-pool = { path = "../libs/db-pool" }
+crypto-core = { path = "../libs/crypto-core" }
 
 [build-dependencies]
 tonic-build = "0.11"
