--- a/backend/messaging-service/Cargo.toml
+++ b/backend/messaging-service/Cargo.toml
@@ -37,6 +37,7 @@ rand = "0.8"
 tonic = "0.11"
 prost = "0.12"
 error-types = { path = "../libs/error-types" }
+prometheus = { workspace = true }
 
 [profile.release]
 codegen-units = 1
