--- a/backend/streaming-service/Cargo.toml
+++ b/backend/streaming-service/Cargo.toml
@@ -35,6 +35,7 @@ anyhow.workspace = true
 async-trait.workspace = true
 reqwest.workspace = true
 prometheus.workspace = true
+once_cell = "1.19"
 validator = { version = "0.16", features = ["derive"] }
 
 # Streaming-specific
