debug(ci): Add debugging steps to workflow

--- a/.github/workflows/ecr-build-push.yml
+++ b/.github/workflows/ecr-build-push.yml
@@ -41,6 +41,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Debug environment
+        run: |
+          echo "GitHub Event: ${{ github.event_name }}"
+          echo "GitHub Ref: ${{ github.ref }}"
+          echo "Service: ${{ matrix.service }}"
+          echo "AWS Role ARN: ${{ secrets.AWS_ROLE_ARN }}"
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -49,6 +56,11 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Verify AWS credentials
+        run: |
+          aws sts get-caller-identity
+          echo "AWS credentials configured successfully"
 
       - name: Login to Amazon ECR
         id: login-ecr
