--- a/.github/workflows/migration-validation.yml
+++ b/.github/workflows/migration-validation.yml
@@ -1,16 +1,8 @@
 name: Database Migration Validation
 
 on:
-  push:
-    branches: [main, develop]
-    paths:
-      - 'backend/migrations/**'
-      - 'backend/**/migrations/**'
-  pull_request:
-    branches: [main, develop]
-    paths:
-      - 'backend/migrations/**'
-      - 'backend/**/migrations/**'
+  # 临时禁用 - GitHub Actions 运行器分配失败
+  workflow_dispatch:
 
 permissions:
   contents: read
