--- a/.github/workflows/test-aws-oidc.yml
+++ b/.github/workflows/test-aws-oidc.yml
@@ -1,10 +1,8 @@
 name: Test AWS OIDC Authentication
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - '.github/workflows/test-aws-oidc.yml'
+  # 临时禁用 - GitHub Actions 运行器分配失败
+  workflow_dispatch:
 
 jobs:
   test-oidc:
