--- a/.github/workflows/test-simple.yml
+++ b/.github/workflows/test-simple.yml
@@ -1,10 +1,8 @@
 name: Test Simple Workflow
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - '.github/workflows/test-simple.yml'
+  # 临时禁用 - GitHub Actions 运行器分配失败
+  workflow_dispatch:
 
 jobs:
   test:
