--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -183,7 +183,7 @@ jobs:
 
   deploy-to-staging:
     name: Trigger ArgoCD Sync
-    needs: [build-and-push, update-deployment]
+    needs: build-and-push
     runs-on: ubuntu-latest
     if: ${{ secrets.AWS_ROLE_ARN != '' }}
 
