--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -287,7 +287,7 @@ jobs:
 
   notify-completion:
     name: Notify Staging Deployment
-    needs: [build-and-push, skip-deployment-notice]
+    needs: build-and-push
     runs-on: ubuntu-latest
     if: always()
 
