fix(workflow): add detect-aws job and gate jobs via needs outputs; remove invalid job-level contexts

--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -18,6 +18,25 @@ env:
   AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
 
 jobs:
+  detect-aws:
+    name: Detect AWS Credentials
+    runs-on: ubuntu-latest
+    outputs:
+      has_aws: ${{ steps.set.outputs.has_aws }}
+    steps:
+      - id: set
+        name: Compute has_aws flag
+        shell: bash
+        env:
+          ROLE: ${{ secrets.AWS_ROLE_ARN }}
+        run: |
+          if [ -n "${ROLE}" ]; then
+            echo "has_aws=true" >> "$GITHUB_OUTPUT"
+            echo "✅ AWS credentials detected"
+          else
+            echo "has_aws=false" >> "$GITHUB_OUTPUT"
+            echo "⚠️  AWS credentials not configured"
+          fi
   build-and-push:
     name: Build Docker Images
     runs-on: ubuntu-latest
@@ -108,11 +127,11 @@ jobs:
 
   update-deployment:
     name: Update Deployment Manifests
-    needs: build-and-push
+    needs: [detect-aws, build-and-push]
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    if: ${{ env.AWS_ROLE_ARN != '' }}
+    if: ${{ needs.detect-aws.outputs.has_aws == 'true' }}
 
     steps:
       - name: Checkout code
@@ -168,9 +187,9 @@ jobs:
 
   skip-deployment-notice:
     name: Skip Notice - AWS Credentials Not Configured
-    needs: build-and-push
+    needs: [detect-aws, build-and-push]
     runs-on: ubuntu-latest
-    if: ${{ env.AWS_ROLE_ARN == '' }}
+    if: ${{ needs.detect-aws.outputs.has_aws != 'true' }}
     steps:
       - name: Print notice
         run: |
@@ -185,9 +204,9 @@ jobs:
 
   deploy-to-staging:
     name: Trigger ArgoCD Sync
-    needs: build-and-push
+    needs: [detect-aws, build-and-push]
     runs-on: ubuntu-latest
-    if: ${{ env.AWS_ROLE_ARN != '' }}
+    if: ${{ needs.detect-aws.outputs.has_aws == 'true' }}
 
     steps:
       - name: Checkout code
@@ -253,9 +272,9 @@ jobs:
 
   smoke-test:
     name: Run Staging Smoke Tests
-    needs: build-and-push
+    needs: [detect-aws, build-and-push]
     runs-on: ubuntu-latest
-    if: ${{ env.AWS_ROLE_ARN != '' }}
+    if: ${{ needs.detect-aws.outputs.has_aws == 'true' }}
 
     steps:
       - name: Checkout code
