chore(workflow): disable matrix fail-fast to surface errors across services

--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -57,6 +57,7 @@ jobs:
           - search-service
           - streaming-service
       max-parallel: 2
+      fail-fast: false
 
     steps:
       - name: Checkout code
